<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_1"
        android:padding="40dp"
        android:id="@+id/qb_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_2"
        android:padding="40dp"
        android:id="@+id/rb_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_3"
        android:padding="40dp"
        android:id="@+id/wr_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_4"
        android:padding="40dp"
        android:id="@+id/te_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_5"
        android:padding="40dp"
        android:id="@+id/k_btn"/>

</LinearLayout>